# spark-vtuber

./: .env.example  LICENSE  README.md  pyproject.toml
docs/: AUDIT_REPORT.md  IMPLEMENTATION_STRATEGY.md  SETUP.md
research/: README.md  claude_verification_prompt.md
research/prompts/: claude_code_audit_prompt.md
research/reports/: research_report.md  technical_feasibility_analysis.md
scripts/: benchmark.py  download_models.sh  setup.sh  start-all.sh  stop-all.sh
scripts/fish-speech/: README.md  fish-speech-serve.sh  install_fish_speech.sh
scripts/vllm/: README.md  install_vllm.sh
scripts/vllm/helpers/: vllm-serve.sh  vllm-status.sh  vllm-stop.sh
scripts/vllm/patches/: gpt_oss_triton_moe.patch
scripts/web-test/: README.md  index.html  server.py
src/spark_vtuber/: __init__.py  main.py  metrics.py  pipeline.py
src/spark_vtuber/avatar/: __init__.py  base.py  dual_vtube_studio.py  lip_sync.py  vtube_studio.py
src/spark_vtuber/chat/: __init__.py  base.py  queue.py  twitch.py
src/spark_vtuber/config/: __init__.py  settings.py
src/spark_vtuber/game/: __init__.py  base.py  watch_mode.py
src/spark_vtuber/game/minecraft/: __init__.py  client.py
src/spark_vtuber/llm/: __init__.py  base.py  context.py  llama.py
src/spark_vtuber/memory/: __init__.py  base.py  chroma.py
src/spark_vtuber/personality/: __init__.py  base.py  coordinator.py  manager.py
src/spark_vtuber/stt/: __init__.py  base.py  parakeet.py  whisper.py
src/spark_vtuber/tts/: __init__.py  base.py  break_finder.py  coqui.py  cosyvoice.py  cosyvoice3.py  fish_speech.py  llmvox.py  piper.py  streaming.py  styletts2.py
src/spark_vtuber/utils/: __init__.py  logging.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py
tests/unit/: __init__.py  test_avatar.py  test_chat.py  test_config.py  test_context.py  test_dual_avatar.py  test_game.py  test_memory.py  test_personality.py
