[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "spark-vtuber"
version = "0.1.0"
description = "AI-powered VTuber streaming system for NVIDIA DGX Spark"
authors = [{name = "Jack Hacksman", email = "slack@hannis.io"}]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    # LLM Inference (vLLM is optional - see [project.optional-dependencies])
    # On DGX Spark (ARM64), use transformers backend instead of vLLM
    "transformers>=4.40.0",
    "peft>=0.10.0",
    "accelerate>=0.28.0",
    "torch>=2.2.0",
    # TTS - LLMVoX (true streaming) and Fish Speech (quality)
    "fish-audio-sdk>=1.0.0",
    "soundfile>=0.12.0",
    "scipy>=1.12.0",
    # LLMVoX dependencies (30M param streaming TTS)
    "huggingface_hub>=0.20.0",
    # STT
    "faster-whisper>=1.0.0",
    "pyannote-audio>=3.1.0",
    "webrtcvad>=2.0.10",
    # Memory/RAG
    "chromadb>=0.4.0",
    "sentence-transformers>=2.5.0",
    # Avatar
    "websockets>=12.0",
    "librosa>=0.10.0",
    "numba>=0.57.0",  # Explicitly pin numba for Python 3.10+ support
    "numpy>=1.26.0",
    # Chat Integration
    "irc>=20.0",
    "aiohttp>=3.9.0",
    "httpx>=0.27.0",
    # Game Integration
    "pyautogui>=0.9.0",
    "pillow>=10.2.0",
    "opencv-python>=4.9.0",
    # Core
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "loguru>=0.7.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "python-dotenv>=1.0.0",
    "asyncio-mqtt>=0.16.0",
    "aiofiles>=23.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "black>=24.0.0",
    "ruff>=0.3.0",
    "mypy>=1.9.0",
    "pre-commit>=3.6.0",
]
# vLLM for high-performance inference (x86_64 only, not available on DGX Spark ARM64)
# On DGX Spark, use NVIDIA's custom vLLM Docker image or transformers backend
vllm = [
    "vllm>=0.4.0",
]
bitsandbytes = [
    "bitsandbytes>=0.43.0",
]

[project.scripts]
spark-vtuber = "spark_vtuber.main:app"

[tool.hatch.build.targets.wheel]
packages = ["src/spark_vtuber"]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --cov=spark_vtuber --cov-report=term-missing"
